# echo-bot

./: .gitignore  README.md  echo-bot.cabal  echo-bot.conf.default  package.yaml  stack.yaml
app/: App.hs  Config.hs  Main.hs
app/FrontEnd/: Console.hs  Telegram.hs
app/FrontEnd/Telegram/: Core.hs
app/FrontEnd/Telegram/Impl/: HTTP.hs
app/Logger/: Impl.hs
app/Main/: ConfigurationTypes.hs
scripts/: lint
src/: EchoBot.hs  Logger.hs
src/FrontEnd/: Telegram.hs
src/Util/: FlexibleState.hs
test/: EchoBotSpec.hs  Spec.hs
test/FrontEnd/: TelegramSpec.hs
test/Tests/: EchoBot.hs
