cabal-version: 1.12

name:           echo-bot
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/aoriens/echo-bot#readme>
homepage:       https://github.com/aoriens/echo-bot#readme
bug-reports:    https://github.com/aoriens/echo-bot/issues
author:         Anton Kalinin
maintainer:     aoriens@gmail.com
copyright:      (c) Anton Kalinin
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/aoriens/echo-bot

library
  exposed-modules:
      EchoBot
      FrontEnd.Telegram
      Lib
      Logger
      Util.FlexibleState
  other-modules:
      Paths_echo_bot
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , mtl
    , text
    , transformers
  default-language: Haskell2010

executable echo-bot-exe
  main-is: Main.hs
  other-modules:
      Config
      FrontEnd.Console
      FrontEnd.Telegram.Impl.HTTP
      Logger.Impl
      Main.ConfigurationTypes
      Paths_echo_bot
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , configurator
    , containers
    , echo-bot
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , mtl
    , network-uri
    , text
    , time
    , transformers
  default-language: Haskell2010

test-suite echo-bot-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      EchoBotSpec
      FrontEnd.TelegramSpec
      Paths_echo_bot
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , echo-bot
    , hspec
    , mtl
    , text
    , transformers
    , unordered-containers
  default-language: Haskell2010
